--- a/nft-minting-app-main/public/config/theme.css
+++ b/nft-minting-app-main/public/config/theme.css
@@ -1,7 +1,7 @@
 :root {
-  --primary: #ebc908;
+  --primary: #505050;
   --primary-text: #ffffff;
-  --secondary: #ebc908;
+  --secondary: #505050;
   --secondary-text: #ffffff;
   --accent: #505050;
   --accent-text: #ffffff;
